# flcore

./: .gitignore  .gitlab-ci.yml  Dockerfile  README.md  benchmark.py  client.py  client_cmd.py  clientcmd.py  comandos  config.yaml  configs.yaml  log_server.txt  plots.ipynb  pruebas.md  pyproject.toml  repeated.py  requirements.txt  run.py  server.py  server_cmd.py  server_results.txt  servercmd.py  tox.ini  ç
.cache/: generate.sh  rootCA_cert.pem  rootCA_key.pem  server_cert.pem  server_csr.pem  server_key.pem
.github/workflows/: python-ci.yml
dataset/: CVDcontrol_Exposome_ECG_imputedFinalcsv_test.csv  CVDcontrol_Exposome_ECG_imputedFinalcsv_train.csv  data_center1.csv  data_center2.csv  data_center3.csv  data_centerAll.csv  exposome_ECG_70.csv
dataset/icrc-dataset/: Untitled.ipynb  metadata.json
dataset/maggic/: metadata.json
dataset/maggic/eeacd191-a194-40eb-bee8-424e04453461/: part-00000-c3afbbbb-b2d1-4493-b170-e227ba98ebc2-c000.snappy.parquet
dataset/study1/: metadata.json
dataset2/: data_center1.csv  data_center10.csv  data_center2.csv  data_center3.csv  data_center4.csv  data_center5.csv  data_center6.csv  data_center7.csv  data_center8.csv  data_center9.csv
fed/: README.md  pyproject.toml
fed/fed/: client_app.py
flcore/: client_selector.py  compile_results.py  datasets.py  dropout.py  metrics.py  performance.py  serialization_funs.py  server_selector.py  smoothWeights.py  smpc_module.py  utils.py
flcore/models/: nn_template.py
flcore/models/bnn/: README.md  (+2 more)
flcore/report/: generate_report.py  template.html
tests/: test_models.py
(+54 files in other folders)
